[package]
name = "kvs"
authors = ["Kazuki Obata <koiru3822fs@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "In memory key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
